syntax = "proto3";

package types.v1;

//option go_package = "backend/gen/types/v1;typesv1";

import "google/protobuf/timestamp.proto";

// === user service ===
message Account {
  string user_id = 1; // varchar(~128)
  string email = 2;   // varchar(320)
  string user_name = 3; // varchar(20)
}
message Profile {
  string user_id = 1; // varchar(~128)
  string display_name = 2; // varchar(30), 'unknown'
  string icon_path = 3; // varchar(50), 'icon_01'
  string status_message = 4; // varchar(50), ''
  string metadata = 5; // json, '{}'
}
message Settings {
  bool allow_search = 1; // json, '{}'
}


// === talk service ===
enum MessageContentType {
  MESSAGE_CONTENT_TYPE_ILLEGAL_UNSPECIFIED = 0;
  MESSAGE_CONTENT_TYPE_TEXT = 1;
  MESSAGE_CONTENT_TYPE_IMAGE = 2;
  MESSAGE_CONTENT_TYPE_VIDEO = 3;
  MESSAGE_CONTENT_TYPE_GIF = 4;
}
message Message {
  string id = 1; // 23
  string from = 2; // varchar(~128)
  string to = 3; // varchar(260)
  MessageContentType content_type = 4; // int
  string text = 5; // text
  string metadata = 6; // json, '{}'
}


// === operation service ===
enum OperationType {
  OPERATION_TYPE_NOOP_UNSPECIFIED = 0;


  // 100番台 operation service
  OPERATION_TYPE_FETCH_OPERATIONS = 100;


  // 200番台 supervisor service
  OPERATION_TYPE_CREATE_ACCOUNT = 200;
  OPERATION_TYPE_CREATE_PROFILE = 201;
  OPERATION_TYPE_RECORD_OPERATION = 202;


  // 300番台 talk service
  OPERATION_TYPE_SEND_MESSAGE = 300; // メッセージを送信した
  OPERATION_TYPE_SEND_MESSAGE_RECV = 301; // メッセージ送信を受信した

  OPERATION_TYPE_SEND_READ_RECEIPT = 302;
  OPERATION_TYPE_SEND_READ_RECEIPT_RECV = 303;

  OPERATION_TYPE_CREATE_GROUP = 304;

  OPERATION_TYPE_INVITE_INTO_GROUP = 305;
  OPERATION_TYPE_INVITE_INTO_GROUP_RECV = 306;

  OPERATION_TYPE_JOIN_GROUP_VIA_INVITATION = 307;
  OPERATION_TYPE_JOIN_GROUP_VIA_INVITATION_RECV = 308;


  // 400番台 user service
  OPERATION_TYPE_GET_ACCOUNT = 400;
  OPERATION_TYPE_UPDATE_ACCOUNT = 401;

  OPERATION_TYPE_GET_PROFILE = 402;
  OPERATION_TYPE_UPDATE_PROFILE = 403; // プロフィールを更新した
  OPERATION_TYPE_UPDATE_PROFILE_RECV = 404; // プロフィール更新を受信した
}
message Operation {
  int64 id = 1; // bigint
  OperationType type = 2; // int
  string source = 3; // varchar(~128)
  repeated string destination = 4; // [varchar(128), ...]
  optional string param1 = 20;
  optional string param2 = 21;
  optional string param3 = 22;
  google.protobuf.Timestamp crated_at = 40;
}